--- a/ProgramacaoWeb/Curso-Web-Fundamentos/estilo.css
+++ b/ProgramacaoWeb/Curso-Web-Fundamentos/estilo.css
@@ -31,7 +31,7 @@ body{
  .hero nav li {
    display: inline-block;
    list-style:none; 
-   margin-left: 8px;
+   margin-left: none;
    border: 1px solid white;
     
  }
@@ -52,8 +52,8 @@ body{
 
  }
  .hero nav ul {
-     text-align: right;
-     margin: 20px 50px 0 0;
+     text-align: left;
+     margin-top: 5px;
  }
 
  main{
