--- a/ProgramacaoWeb/Curso-Web-Fundamentos/estilo.css
+++ b/ProgramacaoWeb/Curso-Web-Fundamentos/estilo.css
@@ -1,110 +1,126 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    background: #ccc;
-    margin: 0px;
+body {
+	font-family: Arial, Helvetica, sans-serif;
+	background: #ccc;
+	margin: 0px;
 }
 
-.hero{
-    background-image: url(imagens/bg-3.jpg);
-    height: 500px;
-    background-position: right center;
-    background-size: cover;
-    border-top: 1px solid;
-   
+.hero {
+	background-image: url(imagens/bg-3.jpg);
+	height: 500px;
+	background-position: right center;
+	background-size: cover;
+	border-top: 1px solid;
 }
-.hero-content{
-    text-align: center;
-    color: white;
-    margin-top: 150px;
+
+.hero-content {
+	text-align: center;
+	color: white;
+	margin-top: 150px;
 }
- .hero-content h1{
-     text-transform: uppercase;
-     font-size: 36px;
-     text-shadow: 3px 3px 5px #333;
+
+.hero-content h1 {
+	text-transform: uppercase;
+	font-size: 36px;
+	text-shadow: 3px 3px 5px #333;
  }
- .hero-content p{
-     background-color: rgba(0, 0, 0, .8);
-     display: inline-block;
-     padding: 10px;
-     border-bottom: 2px solid white;
+ 
+.hero-content p {
+	background-color: rgba(0, 0, 0, .8);
+	display: inline-block;
+	padding: 10px;
+	border-bottom: 2px solid white;
  }
- .hero nav li {
-   display: inline-block;
-   list-style:none; 
-   margin-left: none;
-   border: 1px solid white;
+
+/* Barra de navegação */
+
+.hero nav ul {
+	text-align: right;
+	margin: 10px 20px;
+	padding: 0;
+	font-size: 0;
+}
+
+.hero nav li {
+	display: inline-block;
+	list-style: none; 
+	border: 1px solid white;
+}
+
+.hero nav li:nth-child(2) {
+	margin: 0 10px;
+}
+
+.hero nav a {
+	background:  #000;
+	background: rgba(0, 0, 0, 0.3);
+	display: block;
+	padding: 15px ;
+	color: white;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-size: 15px;
+}
+
+.hero nav a:hover { 
+	background: rgba(0, 0, 0, 0.5);
+}
+
+/* Conteúdo */
+
+main {
+	width: 80%;
+	margin:auto ;
+}
+
+.content-selection {
+	background-color: white ;
+	padding: 15px;
+	margin-top: 15px;
+	overflow: auto;
     
- }
- .hero nav a {
-     background:  #000;
-     background: rgba(0, 0, 0, 0.3);
-     display: block;
-     padding:15px ;
-     color: white;
-     text-decoration: none;
-     text-transform: uppercase;
-     font-size: 15px;
-     
- }
-
- .hero nav a:hover{ 
-     background: rgba(0, 0, 0, 0.5);
-
- }
- .hero nav ul {
-     text-align: left;
-     margin-top: 5px;
- }
-
- main{
-     
-     width: 80%;
-     margin:auto ;
-
- }
-.content-selection{
-    background-color: white ;
-    padding: 15px;
-    margin-top: 15px;
-    overflow: auto;
-    
 }
+
 .card {
-    width: 32%;
-    float: left;
-    
-    box-sizing: border-box;
-    
+	width: 32%;
+	float: left;
+	box-sizing: border-box;
 }
-.card-1, .card-2{
-    margin-right: 2%;
+
+.card-1, .card-2 {
+	margin-right: 2%;
 
 }
-.card img{
-    width: 100%;
-    display: block;
-}
-.card p{
-    background-color: rgb(70, 70, 70) ;
-    color:white ;
-    margin: 0;
-    padding:15px ;
-}
-footer{
-    height: 80px;
-    color: white;
-    font-size: 14px;
-    text-align: center;
-    text-shadow: 2px 2px 2px black;
-    background: #6b6c68;
-    line-height: 80px;
 
+.card img {
+	width: 100%;
+	display: block;
 }
-.titulo{
-    background-color: rgb(204, 201, 201);
-    height: 40px;
-    
-    
-    
+
+.card p {
+	background-color: rgb(70, 70, 70) ;
+	color:white ;
+	margin: 0;
+	padding:15px ;
+}
+
+.titulo {
+	background-color: rgb(204, 201, 201);
+	height: 40px;
+}
+
+footer {
+	height: 80px;
+	color: white;
+	font-size: 14px;
+	text-align: center;
+	text-shadow: 2px 2px 2px black;
+	background: #6b6c68;
+	line-height: 80px;
+}
+
+@media only screen and (max-width: 600px) {
+	.hero nav ul {
+		text-align: center
+	}
 }
     
