--- a/style.css
+++ b/style.css
@@ -1,25 +1,29 @@
+* {box-sizing: border-box;}
+
 body {
 	margin: 0;
 	background: black;
-	color: white;
 }
+
 main {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
 	font-family: monospace;
-	font-size: 20px;
-	transform: translate(-50%, -50%);
-	position: absolute;
-	left: 50%;
-	top: 50%;
+	font-size: 1.5em;
+	gap: 20px;
 }
+
 a {
+	display: block;
+	margin: .5em 1.5em;
 	text-decoration: none;
 	color: white;
-	display: inline-block;
-	margin-bottom: 5px;
+	opacity: 0.7;
+	transition: opacity .2s;
 }
-a:last-child {
-	margin-bottom: 0;
-}
+
 a:hover {
-	opacity: 0.6;
+	opacity: 1;;
 }
