--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
-* {box-sizing: border-box;}
+* {
+	box-sizing: border-box;
+	color: white;
+}
 
 body {
 	margin: 0;
-	background: black;
+	background: #090909;
 }
 
 main {
@@ -12,18 +15,55 @@ main {
 	min-height: 100vh;
 	font-family: monospace;
 	font-size: 1.5em;
-	gap: 20px;
 }
 
-a {
-	display: block;
-	margin: .5em 1.5em;
-	text-decoration: none;
-	color: white;
+.folder a, .folder p {
 	opacity: 0.7;
+	text-decoration: none;
 	transition: opacity .2s;
 }
 
-a:hover {
-	opacity: 1;;
+.folder:hover p, .folder .item a:hover {
+	opacity: 1;
+}
+
+.title p, .item a {
+	display: block;
+}
+
+.icon {
+	top: 2px;
+    position: relative;
+	width: 20px;
+	filter: invert(100%);
+	margin-right: 10px;
+}
+
+.folder .item:last-child {
+	padding-bottom: .3em;
+}
+
+.folder:last-child .item:last-child {
+	padding-bottom: 0;
+}
+
+.item .icon {
+	top: 5px;
+}
+
+.item {
+	padding-left: 20px;
+	display: none;
+}
+
+.folder a {
+	margin-bottom: .3em;
+}
+
+.folder p {
+	margin: .3em 0;
+}
+
+.folder:hover .item {
+	display: block;
 }
