--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,7 @@
+* {
+box-sizing: border-box;    
+}
+
 body{
     font-family: 'Open Sans', arial, helvetica, sans-serif;
     color: wheat;
@@ -27,14 +31,6 @@ p{
 img {
     max-width: 100%;
 }
-
-h1, h2, h3, h4, h5, h6{
-    color: #dadada;
-    font-weight: normal;
-    margin: 1em 0;
-}
-
-
 
 sub, sup{
     font-size: 12px;
@@ -169,37 +165,6 @@ textarea{
     border: 0;
 }
 
-.table{
-    width: 100%;
-    margin: 0 0 2em 0;
-    border-collapse: collapse;
-    text-align: left;
-}
-.table td{
-    padding: .75em;
-}
-.table th{
-    background: #ccc;
-    padding: .75em;
-}
-.table tbody tr td{
-    border-bottom: 1px solid #ccc;
-}
-.table tbody tr:first-child td{
-    border-top: 2px solid #666;
-}
-.table tbody tr:last-child td{
-    border-bottom: 2px solid #666;
-}
-
-.table tbody tr:nth-child(even) td{
-    background: #eee;
-}
-
-.table-alternate tbody td, .table-alternate tbody tr:first-child td, .table-alternate tbody tr:last-child td{
-    border: 1px solid #ddd;
-}
-
 .main-header{
     position: fixed;
     top: 0;
@@ -298,7 +263,7 @@ textarea{
 .copyright li:last-child {
     padding-right: 0;
 }
-/* Grid */
+
 .row{
     overflow: auto;
 }
@@ -342,3 +307,26 @@ textarea{
     width: 100%;
 }
 
+@media only screen and (max-device-width: 900px) {
+    
+    .main-header {
+        position: static;
+        top: 0;
+        left: 0;
+        height:5%;
+        width: 100%;
+        padding: 120px 54px 72px;
+        box-sizing: border-box;
+        background-image: url(images/overlay.png), url(images/photo2.jpg);
+        background-position:  top;
+        text-align: right;
+    }
+    .perfil{
+        max-width: 20%;
+
+    }
+    .main-content{
+        padding: 50px;
+        margin: auto;
+    }
+}
