--- a/estilo.css
+++ b/estilo.css
@@ -1,126 +1,42 @@
 * {
-box-sizing: border-box;    
+    box-sizing: border-box;    
 }
 
-body{
+body {
     font-family: 'Open Sans', arial, helvetica, sans-serif;
     color: wheat;
     line-height: 1.7;
     background:#011d25 ;
-    text-align: center;
-}
-.card {
-    background-color: #033a49;
 }
 
-
-a{
+a {
     transition: color .2s linear, border .2s linear;
     text-decoration: none;
     border-bottom: 1px dotted;
     color:rgb(114, 113, 113);
 }
 
-
-p{
+p {
     margin: 0 0 2em;
 }
-.perfil {
-    max-width: 70%;
-}
-img {
-    max-width: 100%;
+
+/* Cards */
+
+.card {
+    background-color: #012f3b;
+    width: 18rem;
+    margin-bottom: 5%;
+    margin-left: 30px;
+    display: inline-block;
 }
 
-sub, sup{
-    font-size: 12px;
-}
-blockquote{
-    border-left: 5px solid #efefef;
-    margin: 2em 0;
-    padding: .5em 0 .5em 1.5em;
-}
-blockquote p{
-    margin-bottom: .5em;
-}
-blockquote p:last-child{
-    margin-bottom: 0;   
+.btn btn-primary:hover{
+    color: wheat;
 }
 
-code{
-    background: #f7f7f7;
-    border-radius: .35em;
-    border:2px solid #efefef;
-    font-size: .9em;
-    padding: 0.25em 0.65em;
-    font-family: "courier new", monospace;
-    color: #929292;
-}
-
-pre code{
-    display: block;
-}
-
-ul, ol{
-    margin: 0;
-    padding: 0;
-    padding-left: 1.1em;
-}
-li{
-    padding-left: .5em;
-}
-
-.hidden{
-    width: 0;
-    height: 0;
+.recent-works-card img {
+    border-radius: 10px;
     overflow: hidden;
-    visibility: hidden;
-    display: block;
-}
-
-.ul-alternate{
-    list-style-type: none;
-    padding-left: 0; 
-}
-.ul-alternate li{
-    border-bottom: 2px solid #d8d8d8;
-    padding-left: 0;
-}
-.ul-alternate li:last-child{
-   border: 0; 
-}
-
-.ul-icons{
-    list-style-type: none;
-    padding-left: 0; 
-}
-.ul-icons li{
-    display: inline-block;
-    font-size: 2em;
-    color: #011d25;
-}
-
-input, label, textarea, select{
-    display: inline-block;
-    width: 100%;
-    box-sizing: border-box;
-}
-input, textarea, select{
-    background: #ccc;
-    padding: 15px;
-    border-radius: 5px;
-    border: 3px solid transparent;
-    margin-bottom: 15px;
-}
-input[type="radio"], input[type="checkbox"]{
-    width: auto;
-}
-input:focus, textarea:focus{
-    border: 3px solid #49bf9d;
-    outline: none;
-}
-textarea{
-    height: 10em;
 }
 
 .button-default{
@@ -161,11 +77,13 @@ textarea{
     text-align: center;
 }
 
-.imagem-link{
+.imagem-link {
     border: 0;
 }
 
-.main-header{
+/* Header */
+
+header {
     position: fixed;
     top: 0;
     left: 0;
@@ -179,154 +97,162 @@ textarea{
     text-align: right;
 }
 
-.main-header-title{
+.perfil {
+    max-width: 70%;
+}
+
+/* Conteúdo */
+
+main {
+    padding: 124px 54px 72px;
+    text-align: center;
+    width: 65%;
+    float: right;
+}
+
+.main-header-title {
     font-size: 22px;
-    line-height: 1.5;
-    color: white;
     font-weight: normal;
+    line-height: 1.5;
     color: wheat;
 }
-.main-header-title strong{
+
+.main-header-title strong {
     color: white;
     font-weight: normal;
 }
-.main-header-link{
+
+.main-header-link {
     color: inherit;
 }
 
-.main-content{
-    width: 65%;
-    margin-left: 35%;
-    padding: 124px 54px 72px;
-    box-sizing: border-box;
-}
-
-.main-header-link img{
+.main-header-link img {
     border-radius: 50%;
     overflow: hidden;
 }
-.recent-works-card-title:hover{
-    color: wheat;
-}
-.recent-works-card img:hover{
-    color: wheat;
-}
 
-.recent-works-card img{
-    border-radius: 10px;
-    overflow: hidden;
-}
+/* Footer */
 
-
-.gallery-img img{
-    width: 100%;
-}
-.gallery-thumb img, .gallery-img img{
-    margin-bottom: 2%;
-    display: inline-block;
-    border-radius: 5px;
-}
-
-.main-footer{
+footer {
     position: fixed;
     bottom: 0;
     width: 35%;
     left: 0;
     padding: 0 54px 72px 0;
-    box-sizing: border-box;
     text-align: right;
+    list-style: none;
 }
-.main-footer a{
+
+footer a {
     color: rgba(255, 255, 255, 0.4);    
     text-decoration: none;
 }
-.main-footer a:hover{
-    color: wheat;   
+
+footer a:hover {
+    color: wheat;
 }
-.main-footer .ul-icons a{
-  font-size: .75em;   
-    border-bottom: none;
-}
-.copyright{
+
+.copyright *, .control-img {
     list-style: none;
 }
-.copyright li{
+
+.copyright li {
     display: inline-block;
     border-left: solid 1px rgba(255, 255, 255, 0.25);
     padding: 0 0.75em;
     line-height: 1;
     font-size: .8em;
 }
-.copyright li:first-child {
-    border-left: 0;
-}
-.copyright li:last-child {
-    padding-right: 0;
+
+.copyright li:last-child {padding-right: 0;}
+.copyright li:first-child {border-left: 0}
+
+.ul-icons {
+    list-style-type: none;
 }
 
-.row{
-    overflow: auto;
+.ul-icons li {
+    display: inline-block;
+    margin-right: 10px;
 }
 
-.col-2{
-    width: 48.5%;
-    float: left;
-}
-.col-2:first-child{
-    margin-right: 1.5%;
-}
-.col-2:last-child{
-    margin-left: 1.5%;
-}
-.col-2-3{
-    width: 66%;
-    float: left;
-}
-.col-1-3{
-    width: 32%;
-    float: left;
-}
-.col-1-3:nth-child(3n - 2){ /* 1, 4, 7*/
-   margin-right: 2%;
-}
-.col-1-3:nth-child(3n){ /* 3, 6, 9*/
-   margin-left: 2%;
+.ul-icons li:last-child {
+    margin-right: 0;
 }
 
-.col-2-3 + .col-1-3, .col-1-3 + .col-2-3{
-    margin-left: 2%;
+.ul-icons a {
+    font-size: 1.75em;
+    border-bottom: none;
 }
 
-.maps {
-    width: 100%;
-    height: 450px;
-    margin-top: 15px;
-}
+/* Google Maps */
 
-.maps iframe {
-    width: 100%;
-}
+.maps {width: 100%; height: 450px; margin-top: 15px;}
+.maps iframe {width: 100%;}
+
+/* Responsividade */
 
 @media only screen and (max-device-width: 900px) {
     
-    .main-header {
+    header {
         position: static;
         top: 0;
         left: 0;
-        height:5%;
+        height: 5%;
         width: 100%;
-        padding: 120px 54px 72px;
+        padding: 60px;
         box-sizing: border-box;
         background-image: url(images/overlay.png), url(images/photo2.jpg);
         background-position:  top;
         text-align: right;
-    }
-    .perfil{
-        max-width: 20%;
 
     }
-    .main-content{
-        padding: 50px;
-        margin: auto;
+    .perfil {
+        max-width: 20%;
     }
+    content {
+        width: auto;
+        padding:10% ;
+        margin: 40px auto;
+    }
+
+    /* Google maps*/
+    .maps {
+        width: 100%;
+        height: 600px;
+        margin-top: 15px;
+    }
+    
+    .maps iframe {
+        width: 100%;
+    }
+
+    /* Cards */
+    .card {
+        background-color: #012f3b;
+        width: 18rem;
+        margin-bottom: 3%;
+        margin-left:3%;
+        margin-top:3%;
+        margin-right:3%;
+        display: inline-block;
+    }
+
+    /* Footer */
+    footer {
+        margin: auto;
+        width: auto;
+        position: static;
+        text-align: center;
+        padding: 100px 0;
+    }
+
+    footer ul {
+        padding: 0;
+    }
+
+    .copyright li:first-child {
+        padding-left: 0;
+    }
+   
 }
