--- a/ProgramacaoWeb/Relogio/style.css
+++ b/ProgramacaoWeb/Relogio/style.css
@@ -1,20 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
-
-*{
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap');
+* {
     margin: 0;
     padding: 0;
-    font-family:'Open Sans',sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
-body{
-    height: 100hv;
-    background: linear-gradient(100deg,#5C258D, #4389A2);
+body {
+    height: 100vh;
+    background: linear-gradient(120deg, #ffe53bd8, #ff2525da);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.clock{
+.relogio {
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -22,17 +21,31 @@ body{
     width: 550px;
     background: transparent;
     border-radius: 3px;
-    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, .5);
+}
+
+.relogio div {
+    height: 170px;
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    background: rgba(5, 5, 5, .9);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, .7);
     border-radius: 7px;
     letter-spacing: 3px;
 }
 
-.clock span {
+.relogio span {
     font-weight: bolder;
     font-size: 60px;
-
 }
 
-.clock span.tempo {
-    font-size:10px
+.relogio span.tempo {
+    font-size: 10px;
 }
+
+
+/*** Feito por Adalberto C Neto***/
