--- a/estilo.css
+++ b/estilo.css
@@ -1,282 +1,83 @@
 * {
-    box-sizing: border-box;    
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: Arial, Helvetica, sans-serif;
 }
-
-body {
-    font-family: 'Open Sans', arial, helvetica, sans-serif;
-    color: rgb(248, 248, 248);
-    line-height: 1.7;
-    background:#6d9fac ;
+.background {
+	height: 100vh;
+	width: 100vw;
+	background: url('images/background-img.png') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
-
-a {
-    transition: color .2s linear, border .2s linear;
-    text-decoration: none;
-    border-bottom: 1px dotted;
-    color:rgb(114, 113, 113);
+.bird {
+	height: 100px;
+	width: 130px;
+	position: fixed;
+	top: 40vh;
+	left: 30vw;
+	z-index: 100;
 }
-
-p {
-    margin: 0 0 2em;
+.pipe_sprite {
+	position: fixed;
+	top: 40vh;
+	left: 100vw;
+	height: 70vh;
+	width: 6vw;
+	background:radial-gradient(lightgreen 50%, green);
+	border: 5px solid black;
 }
-
-/* Cards */
-
-.card {
-    background-color: #6b99a3;
-    width: 18rem;
-    margin-bottom: 5%;
-    margin-left: 30px;
-    display: flex ;
-    
+.message {
+	position: absolute;
+	z-index: 10;
+	color: black;
+	top: 30%;
+	left: 50%;
+	font-size: 4em;
+	transform: translate(-50%, -50%);
+	text-align: center;
 }
-
-.btn btn-primary:hover{
-    color: rgb(24, 118, 155);
+.messageStyle{
+	background: white;
+	padding: 30px;
+	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+	border-radius: 5%;
 }
-
-.recent-works-card img {
-    border-radius: 10px;
-    overflow: hidden;
+.score {
+	position: fixed;
+	z-index: 10;
+	height: 10vh;
+	font-size: 10vh;
+	font-weight: 100;
+	color: white;
+	-webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: black;
+	top: 0;
+	left: 0;
+	margin: 10px;
+	font-family: Arial, Helvetica, sans-serif;
 }
-
-.button-default{
-    background-color: #011d25;
-    border: 3px solid #011d25;
-    color: white;
-    padding: .75em 5.5em;
-    border-radius: 5px;
-    font-size: .8em;
-    display: inline-block;
-    width: auto;
-    transition: all .5s;
-    cursor: pointer;
+.score_val {
+	color: gold;
+	font-weight: bold;
 }
-.button-default:hover{
-    background-color: wheat;
-    border-color: transparent;
-}
-.button-default-stroke{
-    background-color: #2b6979;
-    border-color: rgb(248, 248, 248);
-    color: inherit;
-}
-.button-default-stroke:hover{
-    color: wheat;
-    border-color: wheat;
-    background-color: #033a49; 
-}
-
-.button-default-small{
-    font-size: .65em;
-}
-.button-default-big{
-    font-size: 1em;
-}
-.button-default-full{
-    display: block;
-    text-align: center;
-}
-
-.imagem-link {
-    border: 0;
-}
-
-/* Header */
-
-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 35%;
-    padding: 124px 54px 72px;
-    box-sizing: border-box;
-    background-image: url(/images/overlay.png), url(images/photo.avif.jpg);
-    background-position: left top;
-    background-size: auto, cover;
-    text-align: right;
-}
-
-.perfil {
-    max-width: 70%;
-}
-
-/* Conteúdo */
-
-main {
-    padding: 124px 54px 72px;
-    text-align: center;
-    width: 65%;
-    float: right;
-}
-
-.main-header-title {
-    font-size: 22px;
-    font-weight: normal;
-    line-height: 1.5;
-    color: wheat;
-}
-
-.main-header-title strong {
-    color: white;
-    font-weight: normal;
-}
-
-.main-header-link {
-    color: inherit;
-}
-
-.main-header-link img {
-    border-radius: 50%;
-    overflow: hidden;
-}
-
-/* Footer */
-
-footer {
-    position: fixed;
-    bottom: 0;
-    width: 35%;
-    left: 0;
-    padding: 0 54px 72px 0;
-    text-align: right;
-    list-style: none;
-}
-
-footer a {
-    color: rgba(255, 255, 255, 0.4);    
-    text-decoration: none;
-}
-
-footer a:hover {
-    color: wheat;
-}
-
-.copyright *, .control-img {
-    list-style: none;
-}
-
-.copyright li {
-    display: inline-block;
-    border-left: solid 1px rgba(255, 255, 255, 0.25);
-    padding: 0 0.75em;
-    line-height: 1;
-    font-size: .8em;
-}
-
-.copyright li:last-child {padding-right: 0;}
-.copyright li:first-child {border-left: 0}
-
-.ul-icons {
-    list-style-type: none;
-}
-
-.ul-icons li {
-    display: inline-block;
-    margin-right: 10px;
-}
-
-.ul-icons li:last-child {
-    margin-right: 0;
-}
-
-.ul-icons a {
-    font-size: 1.75em;
-    border-bottom: none;
-}
-
-/* Google Maps */
-
-.maps {width: 100%; height: 450px; margin-top: 15px;}
-.maps iframe {width: 100%;}
-
-/* Responsividade */
-
-@media only screen and (max-device-width: 1000px) {
-    
-    header {
-        position: static;
-        top: 0;
-        left: 0;
-        height: 5%;
-        width: 100%;
-        padding: 60px;
-        box-sizing: border-box;
-        background-image: url(images/overlay.png), url(images/photo.avif.jpg);
-        background-position:  top;
-        text-align: right;
-
-    }
-    .perfil {
-        max-width: 20%;
-    }
-    content {
-        width: auto;
-        padding:10% ;
-        margin: 40px auto;
-    }
-
-    /* Main */
-
-    main {
-        width: auto;
-        float: none;
-    }
-
-    /* Google maps*/
-    .maps {
-        width: 100%;
-        margin-top: 15px;
-    }
-    
-    .maps iframe {
-        width: 100%;
-    }
-
-    /* Cards */
-    .card {
-    background-color: #638c96;
-        width: 22rem;
-        margin-bottom: 3%;
-        margin-left:3%;
-        margin-top:3%;
-        margin-right:3%;
-        display: inline-block;
-    }
-
-    /* Footer */
-    footer {
-        margin: auto;
-        width: auto;
-        position: static;
-        text-align: center;
-        padding: 40px 0;
-    }
-
-    footer ul {
-        padding: 0;
-    }
-
-    .copyright li:first-child {
-        padding-left: 0;
-    }
-   
-}
-
-.jjj{
- background-color: #638c96;  
-
-}
-
-.ttt{
-    background-color: #6b99a3;
-    
-}
-.ddd{
-    background-color: #2b6979;
-    width: 100%;
-    padding-left: 37%;
-    padding-top:50px;
-    
+@media only screen and (max-width: 1080px) {
+    .message{
+		font-size: 50px;
+		top: 50%;
+		white-space: nowrap;
+	}
+	.score{
+		font-size: 8vh;
+	}
+	.bird{
+		width: 120px;
+		height: 90px;
+	}
+	.pipe_sprite{
+		width: 14vw;
+	}
 }
